Reduce title font size to avoid overlapping
...and because it was awfully big!

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body
 h1
 {
 	display:inline-block; 
-	font-size: 32px;
+	font-size: 2em;
 	line-height: 40px;
 	margin: -70px 48px 0;
 	font-weight: normal;
